# flitsr-calculations-plugin

./: pyproject.toml
flitsr_calculations/: calculations.py
