[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flitsr-calculations"
version = "0.0.1"
authors = [
  {name="Dylan Callaghan", email="dcallaghan@acm.org"}
]
# description="An automatic fault finding/localization tool for multiple faults"
# readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Debuggers",
  "Intended Audience :: Developers",
]
dependencies = [
  'flitsr >= 2.5.0'
]

[project.urls]
Homepage = "https://github.com/DCallaz/flitsr-calculations-plugin"

[project.entry-points.'flitsr.calculation']
calcs = "flitsr_calculations.calculations"
